工作區調整，刪除 Workspace init（移到 template repo）

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,6 +1,7 @@
 {
   "userIgnoreFilters": [
-    "node_modules/"
+    "node_modules/",
+    "src/"
   ],
   "showInlineTitle": true,
   "showLineNumber": true,
